[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["Aznaur <aliev.ak@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
gymnasium = "0.29.1"
matplotlib = "3.7.5"
tensorboardx = "2.6.2.2"
torch = {version = "1.12.0", source = "pytorch-gpu"}
torchvision = {version = "0.13.0", source = "pytorch-gpu"}
torchaudio = {version = "0.12.0", source = "pytorch-gpu"}
tqdm = "^4.66.4"
moviepy = "^1.0.3"
mujoco = "3.1.4"
mujoco-py = "2.1.2.14"
cython = "<3"
glfw = "^2.7.0"
ipython = "8.12.3"
hydra-core = "^1.3.2"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu113"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
